--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1>Boyone Mia 4</h1>
+    </header>
     <div class="box">
         <div class="imgBx">
             <img src="./img/alan.JPG">
@@ -53,6 +56,38 @@
         </div>
         <div class="content">
             <h2>Yanuar<br><span>Mas Mas Letoy</span></h2>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBx">
+            <img src="./img/nopal.JPG">
+        </div>
+        <div class="content">
+            <h2>Naufal Yesha<br><span>VVeboo Gans</span></h2>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBx">
+            <img src="./img/nijar.JPG">
+        </div>
+        <div class="content">
+            <h2>Nizaar<br><span>Mas Mas Nuxulious</span></h2>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBx">
+            <img src="./img/inggil.JPG">
+        </div>
+        <div class="content">
+            <h2>Mas Inggil<br><span>Demon's Slayer</span></h2>
+        </div>
+    </div>
+    <div class="box">
+        <div class="imgBx">
+            <img src="./img/ilmal.JPG">
+        </div>
+        <div class="content">
+            <h2>Ilmal<br><span>Foto paling langka</span></h2>
         </div>
     </div>
 </body>
